--- a/templates/aptamil.html
+++ b/templates/aptamil.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
     <title>Raheem Enterprises</title>
 
@@ -45,6 +46,9 @@ https://templatemo.com/tm-546-raheem-enterprises
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                 <li style="color: white">
+                    <a href=""><i class="fas fa-cart-plus"></i></a>
+                </li>
               <li class="nav-item">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
@@ -81,15 +85,43 @@ https://templatemo.com/tm-546-raheem-enterprises
 
     <div class="row">
         <div class="col-6">
-            <img src="../static/images/formula/aptamil/images.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/formula/aptamil/82d3ebfec031a6ea164666079bf440e6e4297b66.jpg" height="300" width="300" alt="">
-            <img src="../static/images/formula/aptamil/640x640.jpg" height="300" width="300" alt="">
+            <div>
+                <img src="../static/images/formula/aptamil/images.jpeg" height="300" width="300" alt="">
+                <p>KES 2500<p/>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/formula/aptamil/82d3ebfec031a6ea164666079bf440e6e4297b66.jpg" height="300" width="300" alt="">
+                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/formula/aptamil/640x640.jpg" height="300" width="300" alt="">
+                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
         <div class="col-6 mt-5">
-            <img src="../static/images/formula/aptamil/apta1.jpg" height="300" width="300" alt="">
-            <img src="../static/images/formula/aptamil/images%20(1).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/formula/aptamil/Uc8d67d2fb9c84b0a88185b85e7fa56881.jpg" height="300" width="300" alt="">
+            <div>
+                <img src="../static/images/formula/aptamil/apta1.jpg" height="300" width="300" alt="">
+                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus text-center" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/formula/aptamil/images%20(1).jpeg" height="300" width="300" alt="">
+                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/formula/aptamil/Uc8d67d2fb9c84b0a88185b85e7fa56881.jpg" height="300" width="300" alt="">
+                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
          <a class="navbar-brand btn-block mt-5 text-center" href="/formula"><h2><button>Baby Formulae<em class="text-danger">Dashboard</em></button></h2></a>
