--- a/templates/aveeno.html
+++ b/templates/aveeno.html
@@ -45,6 +45,9 @@ https://templatemo.com/tm-546-raheem-enterprises
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                 <li style="color: red">
+                    <a href=""><i class="fas fa-cart-plus"></i></a>
+                </li>
               <li class="nav-item">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
@@ -78,17 +81,45 @@ https://templatemo.com/tm-546-raheem-enterprises
     <br><br><br><br><h1 class="text-center">Aveeno Baby Wipes <em class="text-danger">Dashboard</em></h1>
     <div class="row">
         <div class="col-6">
-            <img src="../static/images/wipes/aveeno/images.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/wipes/aveeno/download.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/wipes/aveeno/0.jpg" height="300" width="300" alt="">
+            <div>
+                <img src="../static/images/wipes/aveeno/images.jpeg" height="300" width="300" alt="">
+                <p>KES 1600</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/wipes/aveeno/download.jpeg" height="300" width="300" alt="">
+                <p>KES 1600</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/wipes/aveeno/0.jpg" height="300" width="300" alt="">
+                 <p>KES 1600</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
         <div class="col-6 mt-5">
-            <img src="../static/images/wipes/aveeno/71-mD2TB2HS._SX679_.jpg" height="300" width="300" alt="">
-            <img src="../static/images/wipes/aveeno/aveeno_baby_sensitive_all_over_wipes_64ct.jpg" height="300" width="300" alt="">
-            <img src="../static/images/wipes/aveeno/s-l640.jpg" height="300" width="300" alt="">
+            <div>
+                <img src="../static/images/wipes/aveeno/71-mD2TB2HS._SX679_.jpg" height="300" width="300" alt="">
+                <p>KES 1600</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/wipes/aveeno/aveeno_baby_sensitive_all_over_wipes_64ct.jpg" height="300" width="300" alt="">
+                 <p>KES 1600</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/wipes/aveeno/s-l640.jpg" height="300" width="300" alt="">
+                 <p>KES 1600</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
-         <a class="navbar-brand btn-block  text-center" href="/wipes"><h2><button>Baby Wipes<em class="text-danger">Dashboard</em></button></h2></a>
+        <a class="navbar-brand btn-block  text-center" href="/wipes"><h2><button>Baby Wipes<em class="text-danger">Dashboard</em></button></h2></a>
          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
