--- a/templates/aveeno_c.html
+++ b/templates/aveeno_c.html
@@ -45,6 +45,9 @@ https://templatemo.com/tm-546-raheem-enterprises
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                 <li style="color: red">
+                    <a href=""><i class="fas fa-cart-plus"></i></a>
+                </li>
               <li class="nav-item">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
@@ -79,15 +82,44 @@ https://templatemo.com/tm-546-raheem-enterprises
 
     <div class="row">
         <div class="col-6">
-            <img src="../static/images/care/aveeno/images.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/care/aveeno/1.jpg" height="300" width="300" alt="">
-            <img src="../static/images/care/aveeno/19156062_ODk0LTEyODAtN2NlNDJjZjc1Yw.jpg" height="300" width="300" alt="">
+            <div>
+                <img src="../static/images/care/aveeno/images.jpeg" height="300" width="300" alt="">
+                <p>KES 1700</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/care/aveeno/1.jpg" height="300" width="300" alt="">
+                <p>KES 1700</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/care/aveeno/19156062_ODk0LTEyODAtN2NlNDJjZjc1Yw.jpg" height="300" width="300" alt="">
+                <p>KES 1700</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
         <div class="col-6 mt-5">
-            <img src="../static/images/care/aveeno/aveeno-skin-relief-nourishing-lotion-500ml_1.jpg" height="300" width="300" alt="">
-            <img src="../static/images/care/aveeno/q2_body_social_image.jpg" height="300" width="300" alt="">
-            <img src="../static/images/care/aveeno/images%20(1).jpeg" height="300" width="300" alt="">
+            <div>
+                <img src="../static/images/care/aveeno/aveeno-skin-relief-nourishing-lotion-500ml_1.jpg" height="300" width="300" alt="">
+                <p>KES 1700</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/care/aveeno/q2_body_social_image.jpg" height="300" width="300" alt="">
+                 <p>KES 1700</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
+            <div>
+                <img src="../static/images/care/aveeno/images%20(1).jpeg" height="300" width="300" alt="">
+                 <p>KES 1700</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+
         </div>
          <a class="navbar-brand btn-block  text-center" href="/care"><h2><button>Skin Care<em class="text-danger">Dashboard</em></button></h2></a>
          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
