--- a/templates/b_seats.html
+++ b/templates/b_seats.html
@@ -45,6 +45,9 @@ https://templatemo.com/tm-546-raheem-enterprises
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                 <li style="color: red">
+                    <a href=""><i class="fas fa-cart-plus"></i></a>
+                </li>
               <li class="nav-item">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
@@ -57,7 +60,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                       Products
                     </a>
                 </li>
-              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -81,33 +83,75 @@ https://templatemo.com/tm-546-raheem-enterprises
     <br><br><br><br><h1 class="text-center">Bath Seats <em class="text-danger">Dashboard</em></h1>
 
     <div class="row">
-        <div class="col-3">
-            <img src="../static/images/bathings/b_seats/images.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/71wydHc8O6L._AC_SS450_.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/71y4bQRMz3L.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/82c1146940c6b64b24427eb73c8cd2f9.jpg" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/b_seats/images.jpeg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/b_seats/71wydHc8O6L._AC_SS450_.jpg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/b_seats/71y4bQRMz3L.jpg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/b_seats/82c1146940c6b64b24427eb73c8cd2f9.jpg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/b_seats/46848_1_8.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/10099025.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/3661787099488.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/totsstore-baby-bath-seat.jpg" height="300" width="300" alt="">
+        <div class="col-4 mt-5">
+            <div>
+                <img src="../static/images/bathings/b_seats/46848_1_8.jpg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/b_seats/10099025.jpeg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/b_seats/3661787099488.jpeg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/b_seats/totsstore-baby-bath-seat.jpg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/b_seats/images%20(4).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/images%20(9).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/images%20(8).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/images%20(1).jpeg" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/b_seats/images%20(4).jpeg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/b_seats/images%20(9).jpeg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/b_seats/images%20(8).jpeg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/b_seats/images%20(1).jpeg" height="300" width="300" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/b_seats/images%20(7).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/images%20(6).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/images%20(5).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/b_seats/images%20(3).jpeg" height="300" width="300" alt="">
-        </div>
          <a class="navbar-brand btn-block  text-center" href="/bathings"><h2><button>Bathings<em class="text-danger">Dashboard</em></button></h2></a>
          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
