--- a/templates/blankets.html
+++ b/templates/blankets.html
@@ -43,6 +43,9 @@ https://raheem.com/tm-546-raheementerprises-clothing
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                 <li style="color: red">
+                    <a href=""><i class="fas fa-cart-plus"></i></a>
+                 </li>
               <li class="nav-item active">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
