--- a/templates/shoes.html
+++ b/templates/shoes.html
@@ -45,6 +45,9 @@ https://templatemo.com/tm-546-raheem-enterprises
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                 <li style="color: red">
+                    <a href=""><i class="fas fa-cart-plus"></i></a>
+                </li>
               <li class="nav-item">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
@@ -80,38 +83,85 @@ https://templatemo.com/tm-546-raheem-enterprises
         <div>
 {#        Adidas #}
             <br><br><h4>Adidas Classic</h4>
-        <img src="../static/images/clothings/shoes/Adidas/adidas%20yzy.jpeg" alt="">
-        <img src="../static/images/clothings/shoes/Adidas/addidas%20female.jpeg" alt="">
-        <img src="../static/images/clothings/shoes/Adidas/addidas%20sply.jpeg" alt="">
+        <div>
+            <img src="../static/images/clothings/shoes/Adidas/adidas%20yzy.jpeg" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
         </div>
+        <div>
+            <img src="../static/images/clothings/shoes/Adidas/addidas%20female.jpeg" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shoes/Adidas/addidas%20sply.jpeg" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+    </div>
 
     </div>
-    <div class="col-3">
+    <div class="col-3 mt-5">
         <div>
 {#        Nike#}
             <br><br><h4>Super Nike</h4>
-        <img src="../static/images/clothings/shoes/Nike/nikeretro4.jpeg" alt="">
-        <img src="../static/images/clothings/shoes/Nike/nike270.jpeg" alt="">
-        <img src="../static/images/clothings/shoes/Nike/nikeretro1.jpeg" alt="">
-
+        <div>
+            <img src="../static/images/clothings/shoes/Nike/nikeretro4.jpeg" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shoes/Nike/nike270.jpeg" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shoes/Nike/nikeretro1.jpeg" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
         </div>
     </div>
     <div class="col-3">
         <div>
 {#        Vans#}
             <br><br><h4>Vans</h4>
-        <img height="224" src="../static/images/clothings/shoes/vans/vans.jpeg" alt="">
-        <img height="224" width="250" src="../static/images/clothings/shoes/vans/s-l400.jpg" alt="">
-        <img height="224" width="250" src="../static/images/clothings/shoes/vans/hdm-vans-041-1596578366.jpg" alt="">
+        <div>
+            <img height="224" src="../static/images/clothings/shoes/vans/vans.jpeg" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img height="224" width="250" src="../static/images/clothings/shoes/vans/s-l400.jpg" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img height="224" width="250" src="../static/images/clothings/shoes/vans/hdm-vans-041-1596578366.jpg" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
         </div>
     </div>
-    <div class="col-3">
+    </div>
+    <div class="col-3 mt-5">
         <div>
 {#        Louis Voitton#}
             <br><br><h4>Louis Voitton</h4>
+        <div>
             <img height="224" width="220" src="../static/images/clothings/shoes/vl/8a81c9b7c457c31494964f756d88d46a.jpg" alt="">
+            <p>KES 4500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
             <img height="224" width="220" src="../static/images/clothings/shoes/vl/2963ede64bb280ec39871200e8b1aab6.jpg" alt="">
+            <p>KES 3500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
             <img height="224" width="220" src="../static/images/clothings/shoes/vl/49572358_img-20200730-wa0047_1080x1080.jpg" alt="">
+            <p>KES 3500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
         </div>
     </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
