--- a/templates/rascal.html
+++ b/templates/rascal.html
@@ -45,6 +45,9 @@ https://templatemo.com/tm-546-raheem-enterprises
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                 <li style="color: red">
+                    <a href=""><i class="fas fa-cart-plus"></i></a>
+                </li>
               <li class="nav-item">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
