--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="../static/images/office.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Classic Shoes</h4></a>
-                <h6>$25.75</h6>
+                <h6>KES 3500</h6>
                 <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -129,7 +129,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="../static/images/stussy-classic-dot-hood-ash-hearher-1_600x600.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Classic Hoodies</h4></a>
-                <h6>$30.25</h6>
+                <h6>KES 2500</h6>
                 <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -147,7 +147,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="../static/images/versace-BlackGold-Fancy-Detail-Classic-Scarf-blackgold-Scarves.jpeg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Classic Scarves</h4></a>
-                <h6>$20.45</h6>
+                <h6>KES 1000</h6>
                 <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -165,7 +165,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="../static/images/images%20(1).jpeg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Woolen Blankets</h4></a>
-                <h6>$15.25</h6>
+                <h6>KES 4000</h6>
                 <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -183,7 +183,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="../static/images/1.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Woolen Sweaters</h4></a>
-                <h6>$12.50</h6>
+                <h6>KES 2500</h6>
                 <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -201,7 +201,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="../static/images/71ifn1wHQGL._AC_UL1500_.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Classic Marvins</h4></a>
-                <h6>$22.50</h6>
+                <h6>KES 1000</h6>
                 <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
