--- a/templates/products.html
+++ b/templates/products.html
@@ -113,7 +113,7 @@ https://templatemo.com/tm-546-raheem-enterprises
                         <a href="#"><img src="../static/images/office.jpg" alt=""></a>
                         <div class="down-content">
                           <a href=""><h4>Classic Shoes</h4></a>
-                          <h6>$18.25</h6>
+                          <h6>KES 3500</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
@@ -131,7 +131,7 @@ https://templatemo.com/tm-546-raheem-enterprises
                         <a href="#"><img src="../static/images/stussy-classic-dot-hood-ash-hearher-1_600x600.jpg" alt=""></a>
                         <div class="down-content">
                           <a href="#"><h4>Classic Hoodies</h4></a>
-                          <h6>$16.75</h6>
+                          <h6>KES 2500</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
@@ -149,7 +149,7 @@ https://templatemo.com/tm-546-raheem-enterprises
                         <a href="#"><img src="../static/images/versace-BlackGold-Fancy-Detail-Classic-Scarf-blackgold-Scarves.jpeg" alt=""></a>
                         <div class="down-content">
                           <a href="#"><h4>Classic Scarves</h4></a>
-                          <h6>$32.50</h6>
+                          <h6>KES 1000</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
@@ -167,7 +167,7 @@ https://templatemo.com/tm-546-raheem-enterprises
                         <a href="#"><img src="../static/images/images%20(1).jpeg" alt=""></a>
                         <div class="down-content">
                           <a href="#"><h4>Woolen Blankets</h4></a>
-                          <h6>$24.60</h6>
+                          <h6>KES 4000</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
@@ -185,7 +185,7 @@ https://templatemo.com/tm-546-raheem-enterprises
                         <a href="#"><img src="../static/images/1.jpg" alt=""></a>
                         <div class="down-content">
                           <a href="#"><h4>Pull Neck Sweaters</h4></a>
-                          <h6>$18.75</h6>
+                          <h6>KES 2500</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
@@ -204,7 +204,7 @@ https://templatemo.com/tm-546-raheem-enterprises
                         <a href="#"><img src="../static/images/13960498_photogrid-plus-1604150320086_1024x1024.jpg" alt=""></a>
                         <div class="down-content">
                           <a href="#"><h4>Classic Trousers</h4></a>
-                          <h6>$12.50</h6>
+                          <h6>KES 2000</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
@@ -222,7 +222,7 @@ https://templatemo.com/tm-546-raheem-enterprises
                         <a href="#"><img src="../static/images/18455033_img-20210322-wa0042_1063x1250.jpg" alt=""></a>
                         <div class="down-content">
                           <a href="#"><h4>Classic Dresses</h4></a>
-                          <h6>$12.50</h6>
+                          <h6>KES 2000</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
